# libopf-plus

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxygen  README.md  boat.txt  libopf-plus.pro.user.3.0-pre1
App/: App.pro  main.cpp
Core/: Core.pro
html/: README_8md.html  README_8md_source.html  annotated.html  classClassifier-members.html  classClassifier.html  classClassifyingStrategy-members.html  classClassifyingStrategy.html  classCsvAdapter-members.html  classCsvAdapter.html  classMSTPrototypes-members.html  classMSTPrototypes.html  classMaxPolicy-members.html  classMaxPolicy.html  classMinPolicy-members.html  classMinPolicy.html  classModel-members.html  classModel.html  classOPF-members.html  classOPF.html  classOPFClassifying-members.html  classOPFClassifying.html  classOPFHeap-members.html  classOPFHeap.html  classOPFModel-members.html  classOPFModel.html  classOPFTraining-members.html  classOPFTraining.html  classPair-members.html  classPair.html  classPattern-members.html  classPattern.html  classPatterns-members.html  classPatterns.html  classPriorityQueue-members.html  classPriorityQueue.html  classPrototypesStrategy-members.html  classPrototypesStrategy.html  classTrainer-members.html  classTrainer.html  classTrainingStrategy-members.html  (+94 more)
includes/: instances.h  opf.h  opf_model.h  pattern.h  patterns.h
latex/: annotated.tex  classClassifier.tex  classClassifyingStrategy.eps  classClassifyingStrategy.tex  classCsvAdapter.tex  classMSTPrototypes.eps  classMSTPrototypes.tex  classMaxPolicy.tex  classMinPolicy.tex  classModel.eps  classModel.tex  classOPF.tex  classOPFClassifying.eps  classOPFClassifying.tex  classOPFHeap.tex  classOPFModel.eps  classOPFModel.tex  classOPFTraining.eps  classOPFTraining.tex  classPair.tex  classPattern.tex  classPatterns.tex  classPriorityQueue.tex  classPrototypesStrategy.eps  classPrototypesStrategy.tex  classTrainer.tex  classTrainingStrategy.eps  classTrainingStrategy.tex  classifier_8h.tex  classifying__strategy_8h.tex  dir_07170e9e6eea75d7ab3191f20fac0eb9.tex  dir_21ec01bb8f7cc89338e121ec376a1f81.tex  dir_24a43d6b04d461e33d01026dd59914c6.tex  dir_28008a43cbf7429e0b362eeadd1cac34.tex  dir_3d2b7bd4980424df474f4ced89771029.tex  dir_4cd4c13d01dc4f9c94211f072e8c6dd9.tex  dir_618a8898985d715a0c4957be353bce11.tex  dir_655c89b7daa221a2eadb969a4b09a21b.tex  (+52 more)
src/: instance.cpp  (+3 more)
(+106 files in other folders)
